web: fix white rectangle behind markers

--- a/overviewer_core/data/web_assets/overviewer.css
+++ b/overviewer_core/data/web_assets/overviewer.css
@@ -179,3 +179,8 @@ div.worldcontrol select {
     margin-left:-50%;
     margin-top:-50%;
 }
+
+.leaflet-div-icon {
+    background: 0;
+    border: 0;
+}
